[project]
name = "laaride-server"
version = "0.1.0"
description = "A scalable transport infrastructure for Ladakh"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.131.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
    "bcrypt==4.0.1",
    "requests>=2.32.5",
]
