[project]
name = "laaride-server"
version = "0.1.0"
description = "A scalable transport infrastructure for Ladakh"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.131.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
    "bcrypt==4.0.1",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "slowapi>=0.1.9",
    "razorpay>=2.0.1",
    "boto3>=1.42.73",
    "redis>=7.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "httpx>=0.28.1",
    "ruff>=0.9.9",
]
